src/objects/Goal__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Benchmark__c</fullName>
        <label>Benchmark</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Benchmarks</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Domains</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Measurable_Goal__c</fullName>
        <label>Measurable Goal</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Measurable</label>
        <referenceTo>Measurable__c</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Goals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steps__c</fullName>
        <label>Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Long</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Short</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>Account__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Goal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Family_Goals</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Term__c</columns>
        <columns>Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Family</value>
        </filters>
        <label>Family Goals</label>
    </listViews>
    <nameField>
        <label>Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <recordTypes>
        <fullName>Collaborative</fullName>
        <active>true</active>
        <label>Collaborative</label>
    </recordTypes>
    <recordTypes>
        <fullName>Family</fullName>
        <active>true</active>
        <label>Family</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>